# durak-online

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
assets/: durak_wasm_bg-DsDrMIps.wasm  durak_wasm_bg-FivqPYsn.wasm  index-BPTvNOS1.css  index-BT68TRin.js  index-C9NCRclO.js  index-CFP0N2WM.css  index-CHGqjBIL.css  index-Crvfxuo8.js  index-CtGI7D1t.js  index-DYHaTu73.js  solver.worker-BCgVZYn4.js  solver.worker-BG_Y0KVb.js
durak-core/: Cargo.toml
durak-core/src/: lib.rs
durak-wasm/: Cargo.toml
durak-wasm/src/: lib.rs
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
web/src/: App.svelte  app.css
web/src/lib/: Card.svelte  CardPicker.svelte  cards.js  settings.js
web/src/workers/: solver.worker.js
