[package]
name = "durak-core"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.61"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Enable getrandom's WebAssembly support so rand works on wasm32-unknown-unknown.
getrandom = { version = "0.2.17", features = ["js"] }