[package]
name = "durak-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
durak-core = { path = "../durak-core" }
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"

# Web-worker friendly API surface
wasm-bindgen-futures = "0.4.42"
serde-wasm-bindgen = "0.6.5"

[dependencies.web-sys]
version = "0.3.69"
features = [
  "console",
  "Worker",
  "DedicatedWorkerGlobalScope",
  "MessageEvent",
]
